--- a/test/test.html
+++ b/test/test.html
@@ -28,7 +28,7 @@
 
 </body>
 
-<script src="../js/jquery-1.10.2.js"></script>
+<script src="../js/jquery.min.js"></script>
 <script src="../js/t_dialog.min.js"></script>
 <link rel="stylesheet" href="../css/t_dialog_style.css" />
 
