优化代码，增加位置控制

--- a/test/test.html
+++ b/test/test.html
@@ -22,6 +22,7 @@
 		<li>t_dialog.dialog({title:'取消按钮', content:"取消按钮", cancelVal: '取消'})<br/><button id='test06'>取消按钮</button><br/><br/></li>
 		<li>t_dialog.dialog({title:'取消按钮回调', content:"取消按钮回调", cancelVal: '取消', cancel: function(){alert('取消按钮回调');}})<br/><button id='test07'>取消按钮回调</button><br/><br/></li>
 		<li>t_dialog.dialog({title:'回调', content:"取消按钮回调",okVal:'确定回调', cancelVal: '取消回调', cancel: function(){alert('取消按钮回调');}, ok: function() {alert('确定回调事件');},})<br/><button id='test08'>两种回调</button><br/><br/></li>
+		<li>t_dialog.dialog({title:'控制位置', content:"通过top,left属性控制", top:"5%", left:"0%"})<br/><button id='test09'>位置控制</button><br/><br/></li>
 	</ul>
 </div>
 
@@ -64,6 +65,10 @@
 
 		$('#test08').click(function(){
 			t_dialog.dialog({title:'回调', content:"取消按钮回调",okVal:'确定回调', cancelVal: '取消回调', cancel: function(){alert('取消按钮回调');}, ok: function() {alert('确定回调事件');},});
+		});
+
+		$('#test09').click(function(){
+			t_dialog.dialog({title:'控制位置', content:"通过top,left属性控制", top:"5%", left:"0%"});
 		});
 	});
 </script>
