--- a/test/test.html
+++ b/test/test.html
@@ -22,6 +22,9 @@
 		<li>t_dialog.dialog({title:'取消按钮', content:"取消按钮", cancelVal: '取消'})<br/><button id='test06'>取消按钮</button><br/><br/></li>
 		<li>t_dialog.dialog({title:'取消按钮回调', content:"取消按钮回调", cancelVal: '取消', cancel: function(){alert('取消按钮回调');}})<br/><button id='test07'>取消按钮回调</button><br/><br/></li>
 		<li>t_dialog.dialog({title:'回调', content:"取消按钮回调",okVal:'确定回调', cancelVal: '取消回调', cancel: function(){alert('取消按钮回调');}, ok: function() {alert('确定回调事件');},})<br/><button id='test08'>两种回调</button><br/><br/></li>
+
+
+		<li><button id='test09'>同时调用</button><br/><br/></li>
 	</ul>
 </div>
 
@@ -65,6 +68,21 @@
 		$('#test08').click(function(){
 			t_dialog.dialog({title:'回调', content:"取消按钮回调",okVal:'确定回调', cancelVal: '取消回调', cancel: function(){alert('取消按钮回调');}, ok: function() {alert('确定回调事件');},});
 		});
+
+		$('#test09').click(function(){
+			t_dialog.dialog({title:'对话框一', content:"对话框一 <button onclick='two()'>对话框二</button>", ok: function() {alert('对话框一回调事件');},});
+		});
+
 	});
+
+	function two(){
+		t_dialog.dialog({
+			title:'对话框二', 
+			content:"对话框二", 
+			top:"10%",
+			left:"10%",
+			ok: function() {alert('对话框二回调事件');}
+		});
+	}
 </script>
 </html>
