--- a/test/test.html
+++ b/test/test.html
@@ -34,7 +34,7 @@
 
 <script src="../js/jquery.min.js"></script>
 <script src="../js/t_dialog.min.js"></script>
-<link rel="stylesheet" href="../css/t_dialog_style.css" />
+<link rel="stylesheet" href="../css/t_dialog_style.min.css" />
 
 <script>
 	$(function(){
